--- a/app/Resources/views/interface/sidebar.html.twig
+++ b/app/Resources/views/interface/sidebar.html.twig
@@ -1,3 +1,4 @@
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 <div class="col-sm-3 col-md-2 sidebar">
     {% if is_granted("ROLE_USER") %}
     <ul class="nav nav-sidebar">
@@ -20,3 +21,4 @@
     </ul>
     {% endif %}
 </div>     
+{% endif %}
